--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "mobx": "^6.3.0",
+    "mobx-react": "^7.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
