--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "mobx": "^6.3.0",
+    "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
