--- a/app.json
+++ b/app.json
@@ -1,35 +1,33 @@
 {
-  "expo": {
-    "name": "Compare the Magic",
-    "slug": "CompareTheMagic",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/ctmlogo.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "package": "com.CompareTheMagic",
-      "versionCode": 1,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/ctmlogo.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/ctmlogo.png"
+    "expo": {
+        "name": "Compare the Magic",
+        "slug": "CompareTheMagic",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/ctmlogo.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "package": "com.CompareTheMagic",
+            "versionCode": 1,
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/ctmlogo.png",
+                "backgroundColor": "#FFFFFF"
+            }
+        },
+        "web": {
+            "favicon": "./assets/ctmlogo.png"
+        }
     }
-  }
 }
