--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,5 @@
     "compilerOptions": {
         "strict": true
     },
-    "exclude": ["__tests__/**/*-test.ts"],
+    "exclude": ["__tests__/**/*-test.ts"]
 }
