--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-    "name": "mtg-ctm-fe",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject",
-        "prettier:write": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json}",
-        "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
-    },
-    "dependencies": {
-        "@react-native-async-storage/async-storage": "~1.17.3",
-        "@types/react-native-vector-icons": "^6.4.11",
-        "axios": "^0.27.2",
-        "expo": "~45.0.0",
-        "expo-status-bar": "~1.3.0",
-        "mobx": "^6.3.0",
-        "mobx-persist-store": "^1.0.6",
-        "mobx-react": "^7.1.0",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "react-native": "0.68.2",
-        "react-native-vector-icons": "^9.2.0",
-        "react-native-web": "0.17.7"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@types/react": "~17.0.21",
-        "@types/react-native": "~0.66.13",
-        "@typescript-eslint/eslint-plugin": "^5.31.0",
-        "eslint": "^8.20.0",
-        "eslint-config-airbnb-typescript": "^17.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-react": "^7.30.1",
-        "prettier": "^2.7.1",
-        "typescript": "~4.3.5"
-    },
-    "private": true
+  "name": "mtg-ctm-fe",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "prettier:write": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json}",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@types/react-native-vector-icons": "^6.4.11",
+    "axios": "^0.27.2",
+    "expo": "^50.0.14",
+    "expo-status-bar": "~1.11.1",
+    "mobx": "^6.3.0",
+    "mobx-persist-store": "^1.0.6",
+    "mobx-react": "^7.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.19.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "~0.66.13",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1",
+    "typescript": "^5.3.0"
+  },
+  "private": true
 }
