--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
     "cli": {
-        "version": ">= 0.55.1"
+        "appVersionSource": "remote"
     },
     "build": {
         "development": {
@@ -10,7 +10,9 @@
         "preview": {
             "distribution": "internal"
         },
-        "production": {}
+        "production": {
+            "autoIncrement": true
+        }
     },
     "submit": {
         "production": {}
