--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@types/react-native-vector-icons": "^6.4.11",
     "axios": "^0.27.2",
     "expo": "^51.0.28",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "mobx": "^6.3.0",
     "mobx-persist-store": "^1.0.6",
     "mobx-react": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "eslint": "^8.20.0",
@@ -37,7 +37,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
